@startuml
class Pizza{
prepare():void
bake():void
cut():void
box():void
}

class BJCheesePizza
class BJPepperPizza
class LDCheesePizza
class LDPepperPizza

class BJFactory
class LDFactory

interface AbsFactory{
creatPizza():Pizza
}

class OrderPizza
class OrderPizza2

Pizza <|-- BJCheesePizza
Pizza <|-- BJPepperPizza
Pizza <|-- LDCheesePizza
Pizza <|-- LDPepperPizza

BJFactory ..> BJPepperPizza
BJFactory ..> BJCheesePizza
LDFactory ..> LDPepperPizza
LDFactory ..> LDCheesePizza
AbsFactory <|.. BJFactory
AbsFactory <|.. LDFactory
AbsFactory --o OrderPizza
AbsFactory --o OrderPizza2

@enduml